[package]
name = "async-http"
version = "0.1.0"
authors = ["Carlos Landeras <carlos.landeras@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std="0.99.3"
surf="1.0.1"
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive = "1.0.99"
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly","compat"] }
