[package]
name = "async"
version = "0.1.0"
authors = ["Carlos Landeras <carlos.landeras@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-core =  "*"
hyper = "*"
futures = "*"
hyper-rustls = "*"
serde_derive = "*"
serde_json = "*"
serde = "*"