[package]
name = "features"
version = "0.1.0"
authors = ["Carlos Landeras <carlos.landeras@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["num-exec"]
num-exec = []
string-exec = []

[dependencies]
log = "0.4.8"
femme = "1.2.0"
